Included "Finish" button translation in Quick Start Wizard
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6090 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -3118,6 +3118,7 @@
 	<string id="20009" value="Pasirinktina"/>
 	<string id="20010" value="&amp;Atgal"/>
 	<string id="20011" value="&amp;Toliau"/>
+	<string id="20012" value="Baigti"/>
 	<string id="20100" value="Jungiamasi"/>
 	<string id="20101" value="Užklausiama"/>
 	<string id="20102" value="Atsakas"/>
