--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3117,6 +3117,7 @@
 	<string id="20009" value="Custom"/>
 	<string id="20010" value="&amp;Back"/>
 	<string id="20011" value="&amp;Next"/>
+	<string id="20012" value="Finish"/>
 	<string id="20100" value="Connecting"/>
 	<string id="20101" value="Requesting"/>
 	<string id="20102" value="Response"/>
