Removed the e-mail since he is no longer a raza translator
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6096 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -16,7 +16,7 @@
 		updatedBy="ZeRO, Frontier, Jann Röder"
 		description="Shareaza Default German Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email="spooky23(at)arcor(dot)de"
+		email=""
 		version="2.2.3.3"
 		type="Language"
 		language="de"
