Removed "deceased" e-mail addresses
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6140 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -16,7 +16,7 @@
 		updatedBy="Xzbeat"
 		description="Shareaza Default Polish Skin File"
 		link="http://www.myservice.pl/"
-		email="brov(at)myservice(dot)pl, michalg17(at)wp(dot)pl, Xzbeat(at)gmail(dot)com"
+		email="Xzbeat(at)gmail(dot)com"
 		version="2.1.2.7"
 		type="Language"
 		language="pl"
