--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -16,7 +16,7 @@
 		updatedBy=""
 		description="Shareaza Default Finnish Skin File"
 		link="http://www.gamerfactory.co.nr/"
-		email="gamerfactory(at)gmail(dot)com"
+		email=""
 		version="2.1.3.7"
 		type="Language"
 		language="fi"
