Fixed language code
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6148 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-es-mx.xml
+++ b/Languages/default-es-mx.xml
@@ -19,7 +19,7 @@
 		email="luis.help(at)gmail(dot)com"
 		version="2.2.3.3"
 		type="Language"
-		language="es"
+		language="es-mx"
 		prompt="Seleccione aquí para usar Shareaza en Español Internacional"
 />
 
